--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fontsource-variable/inter": "^5.0.8",
     "astro": "^3.6.4",
     "astro-compress": "^2.0.15",
+    "nodemailer": "^6.9.9",
     "swiper": "^11.0.4",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.14",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
     "prettier-plugin-tailwindcss": "^0.5.4"
