--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/vercel": "^7.3.4",
     "@fontsource-variable/inter": "^5.0.8",
     "@types/canvas-confetti": "^1.6.4",
     "astro": "^3.6.4",
