--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bun": "^1.0.8",
     "@types/nodemailer": "^6.4.14",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
